# pomerol2triqs

./: .travis.yml  .zenodo.json  CMakeLists.txt  README.md
.github/workflows/: CI.yml  build-and-test-macos.yml  build-and-test-ubuntu.yml  build-and-test.yml
c++/: CMakeLists.txt  chi.cpp  chi3.cpp  g.cpp  g2.cpp  g2_parameters.hpp  main.cpp  main.hpp  parameters.hpp  pomerol_ed.cpp  pomerol_ed.hpp
doc/: dimer_chi3_atom_diag.py  g2_conv.tex
example/: 2band.atom.py  2band.py  anderson.py  bosons.py
python/: CMakeLists.txt  __init__.py  pomerol2triqs_converters.hxx  pomerol2triqs_desc.py  pomerol2triqs_parameters.rst  version.py.in
share/: CMakeLists.txt  pomerol2triqs.modulefile.in  pomerol2triqsvars.sh.in  update-copyright-years.sh
test/: CMakeLists.txt
test/python/: CMakeLists.txt  anderson_g2_matsubara.py  anderson_g2_matsubara.ref.h5  anderson_gf.py  anderson_gf.ref.h5  anomalous.py  anomalous.ref.h5  bosons.py  bosons.ref.h5  chi.py  dimer_chi3.py  dimer_chi3.ref.h5  ensemble_average.py  slater_gf.py  slater_gf.ref.h5  wick.py
